# Smart-Refrigerator-Demo

./: .gitignore  SmartCube.kicad_pcb  SmartCube.kicad_pro  SmartCube.kicad_sch
.github/workflows/: deploy-bom.yml
AnomalyDetection/: anomaly_detection_training.ipynb  model_summary.txt  rf_model.pkl
AnomalyDetection/output/: extracted_labels.npy  feature_scaler.pkl  model_summary.txt  rf_model_v2.h
AnomalyDetection/tools/: data_cleaner.py
DataSheets/: 4-Pin-Patch-Side-Touch-Switch-Cocked-Turtle-Key-Switch-Hy-1189ue.avif
Enclosure/: back.dxf  bottom.dxf  front.dxf
Firmware/: CMakeLists.txt  sdkconfig  sdkconfig.old
Firmware/components/anomaly_detector/: CMakeLists.txt  anomaly_detector.c  data_collector.c  fault_simulator.c
Firmware/components/anomaly_detector/include/: anomaly_detector.h  data_collector.h  fault_simulator.h  vibration_patterns.h
Firmware/components/business_logic/: CMakeLists.txt  business_logic.c
Firmware/components/business_logic/include/: business_logic.h
Firmware/components/lcd_manager/: CMakeLists.txt  Kconfig  lcd_manager.c  ui.c  ui.h
Firmware/components/lcd_manager/assets/animations/: wave.c
Firmware/components/lcd_manager/assets/fonts/: gist-14.c  gist-24.c  yekan_bakh_16.c
Firmware/components/lcd_manager/assets/images/: ai_logo.c  ui_img_device_thermostat_48dp_ffffff_fill1_wght400_grad0_opsz48_png.c  ui_img_electric_meter_48dp_ffffff_fill1_wght400_grad0_opsz48_png.c  ui_img_humidity_percentage_48dp_ffffff_fill1_wght400_grad0_opsz48_png.c  ui_img_mode_fan_54dp_ffffff_fill1_wght400_grad0_opsz48_png.c
Firmware/components/lcd_manager/images/: ui_img_electric_meter_48dp_ffffff_fill1_wght400_grad0_opsz48_png.c  ui_img_humidity_percentage_48dp_ffffff_fill1_wght400_grad0_opsz48_png.c  ui_img_mode_fan_54dp_ffffff_fill1_wght400_grad0_opsz48_png.c
Firmware/components/lcd_manager/include/: lcd_manager.h
Firmware/components/lcd_manager/screens/: splash_screen.c  ui_Screen1.c
Firmware/components/lcd_manager/src/: lcd_manager.c  ui_runtime.c
Firmware/components/lcd_manager/ui/: ui.h
Firmware/components/lcd_manager/ui/screens/: splash_screen.c  splash_screen.h
Firmware/components/lcd_manager/ui/views/: dashboard_view.c  dashboard_view.h
Firmware/components/led_manager/: CMakeLists.txt  led_manager.c
Firmware/components/led_manager/include/: led_manager.h
Firmware/components/motor_manager/: CMakeLists.txt  Kconfig  motor_manager.c
Firmware/components/motor_manager/include/: motor_manager.h
Firmware/components/motors/: CMakeLists.txt  motors.c
Firmware/components/motors/include/: motors.h
Firmware/components/network_manager/: CMakeLists.txt  Kconfig  network_manager.c
Firmware/components/network_manager/include/: network_manager.h
Firmware/components/sensor_manager/: CMakeLists.txt  Kconfig  i2c_scanner.c  sensor_manager.c  who_am_i.c
Firmware/components/sensor_manager/include/: sensor_manager.h
Firmware/components/touch_slider/: CMakeLists.txt  Kconfig  touch_slider.c
Firmware/components/touch_slider/include/: touch_slider.h
Firmware/components/ui_controller/: CMakeLists.txt  ui_controller.c
Firmware/components/ui_controller/include/: ui_controller.h
Firmware/components/ui_manager/: CMakeLists.txt  Kconfig  ui.c  ui.h  ui_manager.c
Firmware/components/ui_manager/anim/: ailogo.c
Firmware/components/ui_manager/fonts/: ui_font_yekanbold24.c  ui_font_yekanreg22.c
Firmware/components/ui_manager/images/: ui_img_device_thermostat_48dp_ffffff_fill1_wght400_grad0_opsz48_png.c
Firmware/components/ui_manager/include/: ui_manager.h
Firmware/components/ui_manager/screens/: splash_screen.c  ui_Screen1.h
Firmware/main/: CMakeLists.txt  data_publisher.c  data_publisher.h  idf_component.yml  main.c
MobileApplication/: pubspec.yaml
MobileApplication/android/app/: build.gradle.kts
MobileApplication/ios/Runner/: Info.plist
MobileApplication/ios/Runner.xcodeproj/: project.pbxproj
MobileApplication/lib/: app_home.dart  main.dart
MobileApplication/linux/: CMakeLists.txt
MobileApplication/linux/runner/: my_application.cc
MobileApplication/macos/Runner.xcodeproj/: project.pbxproj
MobileApplication/test/: widget_test.dart
MobileApplication/web/: index.html  manifest.json
MobileApplication/windows/: CMakeLists.txt
MobileApplication/windows/runner/: Runner.rc  main.cpp
PCB/: README.md  SmartCube.kicad_pcb  SmartCube.kicad_pro  SmartCube.kicad_sch
docs/: bom.html  index.html
(+25 files in other folders)
